--- a/myconfig.json
+++ b/myconfig.json
@@ -1,10 +1,10 @@
 {
-	//the ones with values are the default ones in the project specifications
-	"Server_IP_Address": " ",
-	"Source_Port_Number_UDP": " ",
-	"Destination_Port_Number_TCP_Head": " ",
-	"Destination_Port_Number_TCP_Tail": " ",
-	"Port_Number_TCP": " ",
+	"Server_IP_Address": "127.0.0.1",
+	"Source_Port_Number_UDP": "9876",
+	"Destination_Port_Number_UDP": "8765"
+	"Destination_Port_Number_TCP_Head": "x",
+	"Destination_Port_Number_TCP_Tail": "y",
+	"Port_Number_TCP": "22",
 	"Size_UDP_Payload": "1000",
 	"Inter_Measurement_Time": "15",
 	"Number_UDP_Packets": "6000",
