--- a/myconfig.json
+++ b/myconfig.json
@@ -2,8 +2,8 @@
 	"Server_IP_Address": "192.168.1.30",
 	"Source_Port_Number_UDP": "9876",
 	"Destination_Port_Number_UDP": "8765",
-	"Destination_Port_Number_TCP_Head": "x",
-	"Destination_Port_Number_TCP_Tail": "y",
+	"Destination_Port_Number_TCP_Head": "9898",
+	"Destination_Port_Number_TCP_Tail": "8989",
 	"Port_Number_TCP": "9999",
 	"Size_UDP_Payload": "1000",
 	"Inter_Measurement_Time": "15",
